--- a/KlientsideProjekt/app/index.html
+++ b/KlientsideProjekt/app/index.html
@@ -17,10 +17,17 @@
     <body>
 
 
-        <div data-ng-controller="MapController as MC">
-            <map center="55.5555, 16.23232" zoom="8" class="map"></map>
-        </div>
+        <div ng-controller="EventController as eventCtrl">
 
+            <div data-ng-controller="MapController as MC">
+                <map center="current-location" zoom="8" class="map"></map>
+            </div>
+
+            <li ng-repeat="event in eventCtrl.events">
+                {{event.name}}
+            </li>
+
+        </div>
 
 
         <script src="bower_components/angular/angular.js"></script>
