installerade grunt och bower... pga local webserver
Använda easyPHP innan, men det börjar strula nu när jag ska fixa med
Routing...
Jag tror det är det som strular...

--- a/KlientsideProjekt/app/shared/event/allEventboxTemplate.html
+++ b/KlientsideProjekt/app/shared/event/allEventboxTemplate.html
@@ -47,5 +47,6 @@
                 #{{tagg.tag.name}},
             </a>
         </div>
+        <input type="button" value="Redigera" ng-show="eventCtrl.currentUserOwnsEvent(event)" ng-click="eventCtrl.setEditMode(true, event)">
     </div>
 </div>
