--- a/KlientsideProjekt/app/index.html
+++ b/KlientsideProjekt/app/index.html
@@ -15,6 +15,7 @@
         <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
+    <div ng-view> </div>
     <!-- Subscribe to success flash messages. -->
         <div flash-alert="success" active-class="in" class="alert fade">
             <span class="alert-message">{{flash.message}}</span>
