--- a/KlientsideProjekt/app/shared/event/allEventboxTemplate.html
+++ b/KlientsideProjekt/app/shared/event/allEventboxTemplate.html
@@ -10,6 +10,7 @@
 
                     <h3>{{event.name}}</h3>
                     <h4>{{event.position.name}}</h4>
+                    <h5>Skapare: {{event.user.email}}</h5>
                     <input type="button" value="Redigera" ng-show="eventCtrl.currentUserOwnsEvent(event)" ng-click="eventCtrl.setEditMode(true, event)">
 
                 </div>
